# tv-remote

./: LICENSE  package.json
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/network/: discovery.rs  mod.rs  remote.rs
src/components/: BottomNav.vue  RemoteButton.vue
src/composables/: useTvConnection.ts
src/views/: RemoteView.vue  ScanView.vue
